# euler_spiral

./: .gitignore  CMakeLists.txt  LICENSE  README.md
demo/: demo.gp  demo_anime.gp  demo_parameter_estimation.cpp  demo_parameter_estimation_anime.cpp
include/: euler_spiral.hpp  fresnel_integral.hpp  stdafx.hpp
src/: euler_spiral.cpp  fresnel_integral.cpp  main.cpp
test/: CMakeLists.txt  biarc_test.cpp  euler_spiral_test.cpp
test/src/: imgui_helper.hpp
